# k-means-parallel

./: CMakeLists.txt  Cluster.h  DatasetBuilder.cpp  DatasetBuilder.h  KMeans.cpp  KMeans.h  Node.cpp  Node.h  Point.h  README.md  lda_vs_kmeans.py  main.cpp
data/: tweets_points_20.csv  tweets_topics.csv
postprocessing/: lda_vs_kmeans.py  visualize.py
results/: cosine20dim_cf.csv  memb100dim_cf.csv  memb100dim_cf_new.csv  memb20dim_cf.csv  memb20dim_cf_new.csv  memb50dim_cf.csv  memb50dim_cf_new.csv
